<resources>
    <string name="app_name">Doubtless</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="select">select</string>
    <string name="select_year">Year</string>
    <string name="select_department">Department</string>
    <string name="select_tags">Tags</string>
    <string name="select_purpose">Purpose</string>
    <string name="select_hobbies">Hobbies</string>
    <string name="select_college">College</string>
    <string name="Done">Done</string>
    <string name="text_choice_1">Dancing\n</string>
    <string name="text_choice_2">Singing</string>
    <string name="text_choice_3">Swimming</string>
    <string name="text_choice_4">Travelling</string>
    <string name="text_choice_tag_1">Attendance</string>
    <string name="text_choice_tag_2">Higher Studies</string>
    <string name="text_choice_tag_3">Placements</string>
    <string name="select_at_max_tags">Please select at max 3 tags</string>
    <string name="sign_in_again">Please sign in again!</string>
    <string name="press_again_to_exit">Press again to exit</string>
</resources>